version=12.2.RC1
# RELEASE CANDIDATE 1 for Jmol 12.2

# new feature: Surface Tool now does capping. Surface Tool layout rearrangement.
# new feature; CONTACT command -- generates contact surfaces
#   CONTACT {setA} {setB} [contact options] [contact type] [display option] [display type] [color options] 
#   
#   where we have:
#
#   {setA}    the only required parameter, the set of atoms around which to show contacts
#   {setB}    the surrounding set (default: "all other atoms in this model")
#   [contact options]
#   within <distance>
#   resolution <points per angstrom>
#   +/-x.x  
#   intermolecular
#   intramolecular
#   parameters [cutoff,....]
#   [contact type]
#   hbond
#   clash
#   vdw
#   nci    
#   [display options]        
#   slab ....
#   minset
#   [display type]        
#   full
#   trim
#   plane
#   connect
#   cap
#   surface
#   [color options]
#   color <color>
#   (color) DENSITY <dotSize, default: 0.15>
#   color TYPE     
#
#  --examples
#  contact {ligand}
#  contact {ligand} color type
#  contact {:A} {:B}
#  contact {2001:A} NCI
# 
# new feature: set VDW JMOL --- resets any user-set vdw radii
# new feature: set VDW PROBE  --- sets VDW radii as follows
#   as per Word, et al, J. Mol. Biol. (1999) 285, 1711-1733
#       {_H}.vdw = 1.0;
#       {_H and connected(_C) and not connected(within(smiles,'[r6]'))}.vdw = 1.17;
#       {_C}.vdw = 1.75;
#       {_C and connected(3) and connected(_O)}.vdw = 1.65;
#       {_N}.vdw = 1.55;
#       {_O}.vdw = 1.4;
#       {_P}.vdw = 1.8;
#       {_S}.vdw = 1.8;
#
# new feature: zoom 0     default for 
# bug fix: H atom attachment fixed at 1.1 Angstroms, which is fine for C, but
#  a bit high for O,N (1.0) and low for third row (1.3)
# bug fix: isosurface parameters @x  does not work even when x is an array 
# new feature: ISOSURFACE Kinemage file reader (for contact/clash dots)
#  -- colors are set from the kin file
#  -- parameters [cutoff, valueMin, valueMax, pointType]
#  -- valueMin -- minimum value 